3.5.0/_sources/gallery/lines_bars_and_markers/spectrum_demo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/spectrum_demo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_lines_bars_and_markers_spectrum_demo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_spectrum_demo.py:


========================
Spectrum Representations
========================

The plots show different spectrum representations of a sine signal with
additive noise. A (frequency) spectrum of a discrete-time signal is calculated
by utilizing the fast Fourier transform (FFT).

.. GENERATED FROM PYTHON SOURCE LINES 10-53



.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_spectrum_demo_001.png
   :alt: Signal, Magnitude Spectrum, Log. Magnitude Spectrum, Phase Spectrum , Angle Spectrum
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_spectrum_demo_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_spectrum_demo_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np


    np.random.seed(0)

    dt = 0.01  # sampling interval
    Fs = 1 / dt  # sampling frequency
    t = np.arange(0, 10, dt)

    # generate noise:
    nse = np.random.randn(len(t))
    r = np.exp(-t / 0.05)
    cnse = np.convolve(nse, r) * dt
    cnse = cnse[:len(t)]

    s = 0.1 * np.sin(4 * np.pi * t) + cnse  # the signal

    fig, axs = plt.subplots(nrows=3, ncols=2, figsize=(7, 7))

    # plot time signal:
    axs[0, 0].set_title("Signal")
    axs[0, 0].plot(t, s, color='C0')
    axs[0, 0].set_xlabel("Time")
    axs[0, 0].set_ylabel("Amplitude")

    # plot different spectrum types:
    axs[1, 0].set_title("Magnitude Spectrum")
    axs[1, 0].magnitude_spectrum(s, Fs=Fs, color='C1')

    axs[1, 1].set_title("Log. Magnitude Spectrum")
    axs[1, 1].magnitude_spectrum(s, Fs=Fs, scale='dB', color='C1')

    axs[2, 0].set_title("Phase Spectrum ")
    axs[2, 0].phase_spectrum(s, Fs=Fs, color='C2')

    axs[2, 1].set_title("Angle Spectrum")
    axs[2, 1].angle_spectrum(s, Fs=Fs, color='C2')

    axs[0, 1].remove()  # don't display empty ax

    fig.tight_layout()
    plt.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.272 seconds)


.. _sphx_glr_download_gallery_lines_bars_and_markers_spectrum_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: spectrum_demo.py <spectrum_demo.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: spectrum_demo.ipynb <spectrum_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
